# telemetry-pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
pipeline/: Cargo.toml
pipeline/src/: dashboard.html  dashboard.rs  main.rs  metrics.rs  processor.rs  telemetry.rs
src/: config.py  data_source.py  main.py  telemetry_packet.py  udp_streamer.py
