[package]
name = "f1-telemetry-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
rmp-serde = "1.1"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
chrono = "0.4"
crossbeam = "0.8"
rand = "0.8"
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde_json = "1.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
debug = false